fix extra whitespace before team

--- a/gatsby-site/src/components/Projects/projects.css
+++ b/gatsby-site/src/components/Projects/projects.css
@@ -14,7 +14,7 @@
   width: 105%;
   right: 5px;
   z-index: -5;
-  margin-bottom: -3px;
+  margin-bottom: -5px;
 }
 
 .blue-wave-top-container img {
